--- a/_sass/hamilton/base.scss
+++ b/_sass/hamilton/base.scss
@@ -123,10 +123,7 @@ blockquote {
 pre,
 code {
   font-family: $code-font-family;
-  font-size: 0.9375em;
-  border: 1px solid $border-color-01;
-  border-radius: 3px;
-  background-color: $code-background-color;
+  border-radius: 0.3em;
 }
 
 code {
