--- a/_sass/hamilton/base.scss
+++ b/_sass/hamilton/base.scss
@@ -146,8 +146,25 @@ pre {
 }
 
 div.highlight {
+  font-family: $code-font-family;
   border-radius: 0.3em;
-  @extend %vertical-rhythm;
+  background-color: #f5f5f5; // light gray background
+  color: #333; // dark text
+}
+
+div.highlight > pre.highlight {
+  padding: 8px 12px;
+  overflow-x: auto;
+
+  > code {
+    border: 0;
+    padding-right: 0;
+    padding-left: 0;
+
+    white-space: pre;
+    word-break: normal;
+    word-wrap: normal;
+  }
 }
 
 /**
