--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -91,3 +91,4 @@ layout: default
   {% endif %}
   
 </article>
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
